--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple API built in Node and Express hosted on Heroku",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "deploy": "surge -p ./dist"
   },
   "dependencies": {
     "cors": "2.8.1",
@@ -17,6 +18,9 @@
     "type": "git",
     "url": "https://github.com/techmynd/js-dev-env-demo-api"
   },
-  "author": "Cory House",
-  "license": "MIT"
+  "author": "MJK",
+  "license": "MIT",
+  "devDependencies": {
+    "surge": "^0.20.1"
+  }
 }
